# nowcoder_huawei_ans

./: .gitignore  README.adoc  test.c
C/: hj1.c  hj10.c  hj11.c  hj12.c  hj13.c  hj14.c  hj15.c  hj16.c  hj17.c  hj2.c  hj3.c  hj3.cpp  hj4.c  hj5.c  hj6.c  hj7.c  hj8.c  hj9.c
Cpp/: hj1.cc  hj1.cpp  hj10.cc  hj100.cc  hj101.cc  hj102.cc  hj103.cc  hj105.cc  hj106.cc  hj107.cc  hj108.cc  hj11.cc  hj12.cc  hj13.cc  hj14.cc  hj15.cc  hj16.cc  hj17.cc  hj18.cc  hj19.cc  hj2.cc  hj2.cpp  hj20.cc  hj21.cc  hj22.cc  hj23.cc  hj24.cc  hj25.cc  hj26.cc  hj27.cc  hj28.cc  hj29.cc  hj3.cc  hj3.cpp  hj30.cc  hj31.cc  hj32.cc  hj33.cc  hj34.cc  hj35.cc  (+67 more)
Tools/astyle/: astylerc  check_code_style.sh  check_code_style_all.sh  files_to_check_code_style.sh  fix_code_style.py  pre-commit
Tools/gtest/: CMakeLists.txt  binary_search.cc
cpp/: hj1.cpp
